--- a/contactus.html
+++ b/contactus.html
@@ -67,7 +67,7 @@
     </nav>
     <!------End Navbar ------->
 
-    <div class="container my-5 mb-6">
+    <div class="container mt-3" style="min-height: 70vh;">
       <div class="contact my-5">
         <div class="row">
           <div class="col-6 col-md-6">
